teams/team-riker/dev/templates/2048/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: team-riker
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-2048
